5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1795_3124.log
== TEST (2019-05-30 16:50:44) 
-- CODE:
from numpy import *

vetor= array(float(input('digite um numero: ')))

i = 0

while i > size(vetor): 
	soma = (vetor[i]**1) + 1
	m = (vetor[0] * vetor[1] * vetor [2] * soma)
print(round(m,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:51:02) 
-- CODE:
from numpy import *

vetor= array(float(input('digite um numero: ')))

i = 0

while i > size(vetor): 
	soma = (vetor[i]**1) + 1
	m = (vetor[0] * vetor[1] * vetor [2] * soma)
print(round(m,2))
	
	
-- EXECUTION TIME:
0.33791
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3124/main.py", line 3, in <module>
    vetor= array(float(input()))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:44) 
-- CODE:
from numpy import *

vetor= array(float(input('digite um numero: ')))

i = 0

while i > size(vetor): 
	soma = (vetor[i] ** n -1
	m = (vetor[0] * vetor[1] * vetor [2] * len(soma))
print(round(m,2))
	
	
-- ERROR:
File "XXXX", line 9
    m = (vetor[0] * vetor[1] * vetor [2] * len(soma))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:43) 
-- CODE:
from numpy import *

vetor= array(float(input('digite um numero: ')))

i = 0

while i > size(vetor): 
	soma = (vetor[i]**1) + 1
	a = 1/n
	m = (vetor[0] * vetor[1] * vetor [2] * a)
print(round(m,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:53:49) 
-- CODE:
from numpy import *

vetor= array(float(input('digite um numero: ')))

i = 0

while i > size(vetor): 
	soma = (vetor[i]**1) + 1
	a = 1/n
	m = (vetor[0] * vetor[1] * vetor [2] * a)
print(round(m,2))
	
	
-- EXECUTION TIME:
0.309399
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3124/main.py", line 3, in <module>
    vetor= array(float(input()))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:54:52) 
-- CODE:
from numpy import *

vetor= array(float(input('digite um numero: ')))

i = 0

while i > size(vetor): 
	soma = (vetor[i]**1)
	m = (vetor[0] * vetor[1] * vetor [2] * soma)
print(round(m,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:54:57) 
-- CODE:
from numpy import *

vetor= array(float(input('digite um numero: ')))

i = 0

while i > size(vetor): 
	soma = (vetor[i]**1)
	m = (vetor[0] * vetor[1] * vetor [2] * soma)
print(round(m,2))
	
	
-- EXECUTION TIME:
0.472137
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3124/main.py", line 3, in <module>
    vetor= array(float(input()))
ValueError: could not convert string to float: '[1.9,2.9,3.9,4.9,5.9,6.9,7.9]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
